@@ -1,3 +1,9 @@
+2006-10-25  Marc Singer  <elf@zealous.synapse.com>
+
+	* src/drivers/drv-nand.c (cmd_nand): NAND commands moved to a
+	configurable option. 
+	(nand_report): Fixed the display of the NAND status.
+
 2006-10-23  Marc Singer  <elf@cerise.buici.com>
 
 	* src/drivers/drv-fis.c (prescan_directory): Modified the check
